Fix the game on mobile

--- a/style.scss
+++ b/style.scss
@@ -177,16 +177,25 @@ main {
 
         &.focus {
           border: 3px solid #010b9e57;
+
+          @media (max-width: 800px) {
+            border: 3px solid #000;
+            border-top-color: transparent;
+            border-left-color: transparent;
+            border-right-color: transparent;
+          }
         }
 
         @media (max-width: 800px) {
           width: 42px;
           height: 42px;
+          font-size: 40px;
         }
 
         @media (max-width: 500px) {
           width: 36px;
           height: 36px;
+          font-size: 34px;
         }
 
         &.in_place {
